--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,30 +1,14 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
 
-<head>
-    <title>Django Auth</title>
-</head>
+{% block page_title %}Login Page{% endblock %}
 
-<body>
-    <h1>User Login</h1>
-    <nav>
-        <ul>
-            <li><a href="{% url 'login' %}">Login</a></li>
-            <li><a href="{% url 'logout' %}">Logout</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Profile</a></li>
-        </ul>
-    </nav>
+{% block page_heading %}User Login{% endblock %}
 
-    <hr> {% if messages %}
-    <div>
-        {% for message in messages %} {{ message }} {% endfor %}
-    </div>
-    {% endif %}
-
+{% block content %}
     <form method="POST">
+        {% csrf_token %}
         {{ login_form }}
+        <button type="submit">Login</button>
     </form>
-</body>
-
-</html>
+    <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+{% endblock %}
